Cropper: changed avatarMode, fixed css

--- a/src/ui/components/modules/imageForm/DropZoneField/Cropper/Cropper.scss
+++ b/src/ui/components/modules/imageForm/DropZoneField/Cropper/Cropper.scss
@@ -179,9 +179,9 @@
 
 .cropper-point {
   background-color: #39f;
-  height: 5px;
+  height: 10px;
   opacity: 0.75;
-  width: 5px;
+  width: 10px;
 }
 
 .cropper-point.point-e {
@@ -233,31 +233,31 @@
 .cropper-point.point-se {
   bottom: -3px;
   cursor: nwse-resize;
-  height: 20px;
+  height: 15px;
   opacity: 1;
   right: -3px;
-  width: 20px;
+  width: 15px;
 }
 
 @media (min-width: 768px) {
   .cropper-point.point-se {
-    height: 15px;
-    width: 15px;
+    height: 18px;
+    width: 18px;
   }
 }
 
 @media (min-width: 992px) {
   .cropper-point.point-se {
-    height: 10px;
-    width: 10px;
+    height: 19px;
+    width: 19px;
   }
 }
 
 @media (min-width: 1200px) {
   .cropper-point.point-se {
-    height: 5px;
+    height: 21px;
     opacity: 0.75;
-    width: 5px;
+    width: 21px;
   }
 }
 
